src/test/incremental/const-generics/hash-tyvid-regression-4.stderr
error[E0599]: no method named `push` found for struct `SmallVec` in the current scope
  --> $DIR/hash-tyvid-regression-4.rs:23:19
   |
LL |         node.keys.push(k);
   |                   ^^^^ method not found in `SmallVec<_, { D * 2 }>`
...
LL | struct SmallVec<T, const D: usize> {
   | ---------------------------------- method `push` not found for this

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
